<resources>
    <string name="app_name">My api</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vistas">vistas</string>
    <string name="name">Name</string>
    <string name="que_estas_buscando">¿Que estas buscando?</string>
    <string name="más_top">mas top</string>
    <string name="proximo">proximo</string>
    <string name="popular">popular</string>
    <string name="vitas">vitas</string>
</resources>