<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pelii"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titulof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:ems="10"
            android:text="@string/que_estas_buscando"
            android:textSize="17sp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            >

            <ImageView
                android:id="@+id/imagenpeliculaf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                app:srcCompat="@drawable/peli" />



            <TextView
                android:id="@+id/vistasf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="1dp"
                android:layout_toEndOf="@+id/imagenpeliculaf"
                android:hint="@string/vistas"
                android:textSize="11sp" />


            <RatingBar
                android:id="@+id/calificacionf"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vistasf"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="78dp"
                android:layout_toEndOf="@+id/imagenpeliculaf"
                android:contentDescription="@string/app_name"
                android:numStars="10"
                android:rating="1.5"
                android:stepSize="0.5" />


        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>