<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Vista">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lupa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/inicio">







        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginBottom="20dp"
            android:scrollbars="horizontal">

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:baselineAligned="false"
                android:text="@string/popular"
                 />

            <Button
                android:id="@+id/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/proximo"
                 />

            <Button
                android:id="@+id/mastop"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/más_top" />


        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerpeliculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:paddingHorizontal="@dimen/cardview_default_elevation"
            android:paddingBottom="1dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

    <ImageView
        android:id="@+id/inicio"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favorito"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/inicio" />

    <ImageView
        android:id="@+id/favorito"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/inicio"

        app:srcCompat="@drawable/corazon" />


</androidx.constraintlayout.widget.ConstraintLayout>